# Subtextor

./: .gitignore  CLAUDE.md  LICENSE  README.EN.md  README.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/skills/git-commit/: SKILL.md
config/: default.yaml
prompts/: base.txt  focus_abuse.txt  focus_fraud.txt  lenient.txt  strict.txt
src/apps/: __init__.py
src/apps/api/: __init__.py  __main__.py  main.py
src/apps/cli/: __init__.py  demo.py  serve_vlm.py
src/apps/web/: index.html
src/eval/: __init__.py
src/eval/benchmark/: __init__.py  run_benchmark.py
src/ml/: __init__.py
src/ml/training/: __init__.py  convert_nsfw_onnx.py
src/subtextor/: __init__.py  cache_store.py  config.py  imaging.py  ocr.py  paths.py  pipeline.py  prompts.py  routing.py  serving.py  textfilter.py  types.py
src/subtextor/detectors/: __init__.py  base.py  factory.py  nsfw_onnx.py  qr_decoder.py
src/subtextor/reputation/: __init__.py  base.py  factory.py  local_list.py  mock.py
src/subtextor/stages/: __init__.py  base.py  cache_stage.py  prefilter_stage.py  vlm_stage.py
src/subtextor/synth/: __init__.py  generate.py  templates.py
src/subtextor/vlm/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py  parsing.py
tests/: test_cache.py  test_parsing_and_routing.py  test_vlm_degradation.py
